--- a/frontend/src/mystyles.scss
+++ b/frontend/src/mystyles.scss
@@ -1,2 +1,16 @@
 @charset "utf-8";
 @import "~bulma/bulma";
+
+html {
+  height: 100vh;
+
+}
+body {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+}
+main {
+  height: calc(100vh - 3.5rem);
+  z-index: -1;
+}
