--- a/api/templates/api/index.html
+++ b/api/templates/api/index.html
@@ -27,6 +27,16 @@
     <meta name="description" property="og:description" content="Bienvenue sur le site de ParkMonBaïk ! C'est un site web qui permet de chercher et d'ajouter des emplacements pour stationner votre vélo à Montréal"/>
     <script src="https://www.google.com/recaptcha/api.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T4MX38D9PD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-T4MX38D9PD');
+    </script>
+
     <title>ParkMonBaïk</title>
   </head>
   <body>
